package io.github.salepartido.api.domain.eventos.model;

public enum Rol {
    DEPORTISTA,
    PROPIETARIO
}
