export interface Local {
  uuid: string;
  nombre: string;
  direccion: string;
}
